--- a/index.html
+++ b/index.html
@@ -137,27 +137,27 @@ With hands-on experience across domains—healthcare, e-commerce, HR, telecom, a
                <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/HR.png" alt="Dashboard 2" class="work-img collage-img">
+                <img src="Images/Dashboards/HR.png" alt="Dashboard 2" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/Home.png" alt="Dashboard 3" class="work-img collage-img">
+                <img src="Images/Dashboards/Home.png" alt="Dashboard 3" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/forecasting.png" alt="Dashboard 5" class="work-img collage-img">
+                <img src="Images/Dashboards/forecasting.png" alt="Dashboard 5" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/Agri.png" alt="Dashboard 6" class="work-img collage-img">
+                <img src="Images/Dashboards/Agri.png" alt="Dashboard 6" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/Executive.png" alt="Dashboard 7" class="work-img collage-img">
+                <img src="Images/Dashboards/Executive.png" alt="Dashboard 7" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
-                <img src="Images/dashboards/Learning.png" alt="Dashboard 8" class="work-img collage-img">
+                <img src="Images/Dashboards/Learning.png" alt="Dashboard 8" class="work-img collage-img">
                 <span class="click-me-text">Click me</span>
             </div>
             <div class="collage-img-wrapper">
