--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
 
     <section class="about-section" id="about">
-        <img src="Images/tools/P.jpeg" alt="Profile Photo" class="profile-photo" id="profilePhoto">
+        <img src="Images/tools/P.jpeg"alt="Profile Photo"class="profile-photo"id="profilePhoto"draggable="false"oncontextmenu="return false;">
         <div class="about-content">
             <h1>Humera Shaik</h1>
             <p>
