--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     </nav>
 
     <section class="about-section" id="about">
-        <img src="Images/tools/P.jpeg"alt="Profile Photo"class="profile-photo"id="profilePhoto"draggable="false"oncontextmenu="return false;">
+        <img src="Images/tools/P.jpeg"
+            alt="Profile Photo"
+            class="profile-photo"
+            id="profilePhoto"
+            draggable="false"
+            oncontextmenu="return false;">
         <div class="about-content">
             <h1>Humera Shaik</h1>
             <p>
