--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
-        <a href="#certifications">Certifications</a>
+        <a href="#projects">Projects</a> <!-- Add this line -->
         <a href="#mywork">Dashboards</a>
         <a href="#ai-automation">AI Automation</a>
+        <a href="#certifications">Certifications</a>
     </nav>
 
     <section class="about-section" id="about">
@@ -31,10 +32,9 @@
         <div class="about-content">
             <h1>Humera Shaik</h1>
             <p>
-               I'm a Data Analyst with strong hands-on in Excel, SQL, Power BI, Tableau, and Python for end-to-end data analysis. I build insightful dashboards, apply machine learning models, and leverage AI tools like ChatGPT, Copilot, claude.ai and Power BI Copilot to deliver fast, impactful solutions.
-With hands-on experience across domains—healthcare, e-commerce, HR, telecom, and more—I turn data into decisions. My work spans data cleaning, EDA, forecasting, and predictive modeling, enhanced by prompt engineering and AI-driven automation for smarter analysis.
-            </p>
-            <a href="Images/certificate/HS DA 45.pdf" target="_blank" class="resume-btn">Resume</a>
+               AI-Driven Analyst → Data Scientist | Python • ML • Dashboards • Ethical AI
+            </p> 
+               <a href="Images/tools/Humera_Shaik_data_science.pdf" target="_blank" class="resume-btn">Resume</a>
         </div>
         <div class="contact-icons">
             <a class="contact-icon" href="tel: +91 7382273550" title="Contact" target="_blank"><i class="fas fa-phone"></i></a>
@@ -46,7 +46,7 @@ With hands-on experience across domains—healthcare, e-commerce, HR, telecom, a
     <section class="skills-section" id="skills">
         <h2>Skills</h2>
         <div class="skills-icons">
-            <img src="Images/tools/Excel.jfif" alt="Excel" class="skill-icon">
+            <img src="Images/tools/Excel.jfif" alt="Microsoft Excel logo in green and white, representing spreadsheet and data analysis skills, set against a plain background" class="skill-icon">
             <img src="Images/tools/PowerBi.jfif" alt="Power BI" class="skill-icon">
             <img src="Images/tools/Tableau.png" alt="Tableau" class="skill-icon">
             <img src="Images/tools/sql.jfif" alt="PostgreSQL" class="skill-icon">
@@ -117,23 +117,93 @@ With hands-on experience across domains—healthcare, e-commerce, HR, telecom, a
           <a class="contact-icon" href="https://github.com/HumeraShaik24" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </section>
-    <section class="certifications-section" id="certifications">
-        <h2>Certifications</h2>
-        <div class="certifications-cards">
-            <img src="Images/certificate/be10X.png" alt="Certification 1" class="cert-img hover-zoom">
-            <img src="Images/certificate/Prompt.png" alt="Certification 2" class="cert-img hover-zoom">
-            <img src="Images/certificate/Simplilearn.png" alt="Certification 3" class="cert-img hover-zoom">
-            <img src="Images/certificate/Wscube.png" alt="Certification 4" class="cert-img hover-zoom">
-            <img src="Images/certificate/Freedom.png" alt="Certification 5" class="cert-img hover-zoom">
-            <img src="Images/certificate/Vertex.jpeg" alt="Certification 6" class="cert-img hover-zoom">
+    <!-- ...existing code... -->
+
+<section class="projects-section" id="projects">
+    <h2>Projects</h2>
+    <div class="projects-cards">
+        <!-- Project 1 -->
+        <div class="project-card">
+            <h3>Retail Customer Segmentation & Purchase Prediction</h3>
+            <p> predicted purchase  
+           behavior with 100% accuracy (ROC-AUC =1.0) due to strong feature separation in this dataset.</p>
+            <div class="project-skills">
+                <span>RFM</span>
+                <span>K-Means</span>
+                <span>Pandas</span>
+                <span>Matplotlib</span>
+                <span>Seaborn</span>
+                <span>Sklearn</span>
+            </div>
+            <a href="https://github.com/HumeraShaik24/Retail_Customer-Segmentation-and-Purchase-Prediction" target="_blank" class="github-link" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
         </div>
-        <div class="contact-icons">
-            <a class="contact-icon" href="tel:+91 7382273550" title="Contact" target="_blank"><i class="fas fa-phone"></i></a>
-            <a class="contact-icon" href="mailto:humerah610@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
-            <a class="contact-icon" href="https://www.linkedin.com/in/humerashaik-dataanalyst/" title="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-            <a class="contact-icon" href="https://github.com/HumeraShaik24" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+        <!-- Project 2 -->
+        <div class="project-card">
+            <h3>Revenue Leak Detection</h3>
+            <p> Detected ₹1.02M revenue leaks across 6,000+ transactions;  
+            implemented corrective strategies.</p>
+            <div class="project-skills">
+                <span>Financial Analysis</span>
+                <span>Pandas</span>
+                <span>Matplotlib</span>
+                <span>Seaborn</span>
+            </div>
+            <a href="https://github.com/HumeraShaik24/Passive-Revenue-Leak-Finder" target="_blank" class="github-link" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
         </div>
-    </section>
+        <!-- Project 3 -->
+        <div class="project-card">
+            <h3>AI-Generated Financial Analysis Report</h3>
+            <p>AI-powered dashboard analyzing 12 companies; insights on    
+           profitability & anomalies guiding strategies.</p>
+            <div class="project-skills">
+                <span>AI Automation</span>
+            </div>
+            <a href="https://github.com/HumeraShaik24/Financial-Statements-Report" target="_blank" class="github-link" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <!-- Project 4 -->
+        <div class="project-card">
+            <h3> Telecom Customer Churn Prediction</h3>
+            <p>Random Forest model with 79% accuracy; preserved for  
+          deployment.</p>
+            <div class="project-skills">
+                <span>Random Forest</span>
+                <span>Pandas</span>
+                <span>Matplotlib</span>
+                <span>Seaborn</span>
+                <span>Sklearn</span>
+            </div>
+            <a href="https://github.com/HumeraShaik24/Telecom-customer-churn-prediction" target="_blank" class="github-link" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+        <!-- Project 5 -->
+        <div class="project-card">
+            <h3>Dynamic Pricing Model
+                (E-commerce) </h3>
+            <p> Regression-based model, 15% revenue increase, 8% reduction in  
+           price volatility.</p>
+            <div class="project-skills">
+                <span>Regression</span>
+                <span>E-commerce Analytics</span>
+                <span>Pandas</span>
+                <span>Matplotlib</span>
+                <span>Seaborn</span>
+                <span>Sklearn</span>
+            </div>
+            <a href="https://github.com/HumeraShaik24/Dynamic-pricing-model-for-Ecommerce" target="_blank" class="github-link" title="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </div>
+</section>
+
+<!-- ...existing code... -->
     <section class="mywork-section" id="mywork">
         <h2>Dashboards</h2>
         <div class="mywork-collage">
@@ -204,6 +274,23 @@ With hands-on experience across domains—healthcare, e-commerce, HR, telecom, a
             <a class="contact-icon" href="https://github.com/HumeraShaik24" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
         </div>
     </section>
+    <section class="certifications-section" id="certifications">
+        <h2>Certifications</h2>
+        <div class="certifications-cards">
+            <img src="Images/certificate/be10X.png" alt="Certification 1" class="cert-img hover-zoom">
+            <img src="Images/certificate/Prompt.png" alt="Certification 2" class="cert-img hover-zoom">
+            <img src="Images/certificate/Simplilearn.png" alt="Certification 3" class="cert-img hover-zoom">
+            <img src="Images/certificate/Wscube.png" alt="Certification 4" class="cert-img hover-zoom">
+            <img src="Images/certificate/Freedom.png" alt="Certification 5" class="cert-img hover-zoom">
+            <img src="Images/certificate/Vertex.jpeg" alt="Certification 6" class="cert-img hover-zoom">
+        </div>
+        <div class="contact-icons">
+            <a class="contact-icon" href="tel:+91 7382273550" title="Contact" target="_blank"><i class="fas fa-phone"></i></a>
+            <a class="contact-icon" href="mailto:humerah610@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a class="contact-icon" href="https://www.linkedin.com/in/humerashaik-dataanalyst/" title="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a class="contact-icon" href="https://github.com/HumeraShaik24" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+    </section>
  <script src="script.js"></script>
 </body>
-</html>
+</html>s
