--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="about-content">
             <h1>Humera Shaik</h1>
             <p>
-               AI-Driven Data Analyst → Data Scientist | Python • ML • Dashboards • Ethical AI
+               AI-Driven Data Analyst → Data Scientist | Python • ML • BI Dashboards • Ethical AI
             </p> 
                <a href="Images/tools/Humera_Shaik_data_science.pdf" target="_blank" class="resume-btn">Resume</a>
         </div>
@@ -294,4 +294,5 @@
  <script src="script.js"></script>
 </body>
 </html>s
+
 
